# superbuild

./: CMakeLists.txt  README.md  bootstrap.sh  copyright  pipeline.yml
bootstrap/: make-root.sh  make-vcpkg-tool.sh
ci/: azure-pipelines.yml  build.yml  msys2-bootstrap.yml  publish.yml  setup-macos.yml  setup-msys2.yml  setup-ubuntu.yml
cmake/: CMakeLists.txt  options.in  update-configuration.cmake.in  vcpkg-bootstrap.cmake  vcpkg-commands.cmake  vcpkg-configuration.cmake  vcpkg-configuration.json.in
patches/: Choose-MinGW-triplets-when-building-vcpkg-with-MinGW.patch  Don-t-build-tls12-download-with-MINGW.patch  Use-only-named-packages-from-extra-registries.patch
ports/base-files/: base-files_11.dsc  copyright  portfile.cmake  vcpkg.json
ports/dpkg-source-util/: README.md  dpkg_source_util.cmake  portfile.cmake  vcpkg-port-config.cmake  vcpkg.json
ports/xz-utils/: portfile.cmake  vcpkg.json
ports/zlib/: libz-mingw-w64_1.2.11+dfsg-2.dsc  portfile.cmake  vcpkg.json
versions/: baseline.json
versions/b-/: base-files.json
versions/c-/: cmake-build-install-strip.json
versions/d-/: dpkg-source-util.json
versions/x-/: xz-utils.json
versions/z-/: zlib.json
